# docs2vecs

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  github-actions.yml  release-oci-image.yml  release-pypi.yml  release.yml
docs/readme/: indexer-skills.md  sample-config-file-1.yml  sample-config-file-2.yml
etc/: ca-bundle.crt  fetchDefaultModels.py  get_certs.sh
src/docs2vecs/: __init__.py  __main__.py  app.py  cli.py  core.py
src/docs2vecs/readers/: yaml.py
src/docs2vecs/static/: app.js  index.html  styles.css
src/docs2vecs/subcommands/indexer/: indexer.py
src/docs2vecs/subcommands/indexer/config/: config.py  config_schema.yaml
src/docs2vecs/subcommands/indexer/db/: __init__.py  mongodb.py
src/docs2vecs/subcommands/indexer/document/: __init__.py  chunk.py  document.py
src/docs2vecs/subcommands/indexer/skills/: __init__.py  ada002_embedding_skill.py  azure_blob_store_uploader_skill.py  azure_vector_store_skill.py  chromadb_vector_store_skill.py  default_file_reader.py  document_intelligence_skill.py  factory.py  faiss_vector_store_skill.py  file_scanner_skill.py  jira_loader_skill.py  llama_fastembed_embedding_skill.py  local_document_parser.py  logger.py  recursive_character_splitter_skill.py  scrollwordexporter_skill.py  semantic_splitter_skill.py  skill.py  tracker.py
src/docs2vecs/subcommands/integrated_vec/: integrated_vec.py
src/docs2vecs/subcommands/integrated_vec/config/: config_schema.yaml
tests/: test_cli.py  test_config.py  test_faiss_vector_store.py
tests/test_data/: test_config.yaml  test_config_integrated_vec.yaml  test_file.txt
